# adblock-rust-jni

./: README.md
aar/: .gitignore  build.gradle  settings.gradle
aar/gradle/wrapper/: gradle-wrapper.properties
aar/lib/: build.gradle
aar/lib/src/androidTest/java/com/xayn/adblocker/rust/: ExampleInstrumentedTest.kt
aar/lib/src/main/: AndroidManifest.xml
aar/lib/src/main/java/com/xayn/adblockeraar/: Adblock.java  AdblockEngine.java  AdblockResult.java  AdblockService.java
aar/lib/src/test/java/com/xayn/adblockeraar/: ExampleUnitTest.kt  LoadingJniTest.kt
aar/webviewadblocker/: build.gradle
aar/webviewadblocker/src/androidTest/java/com/xayn/adblocker/webviewadblocker/: ExampleInstrumentedTest.kt
aar/webviewadblocker/src/main/: AndroidManifest.xml
aar/webviewadblocker/src/main/java/com/xayn/adblocker/webviewadblocker/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
aar/webviewadblocker/src/main/res/layout/: activity_main.xml
aar/webviewadblocker/src/main/res/menu/: menu_main.xml
aar/webviewadblocker/src/main/res/navigation/: nav_graph.xml
aar/webviewadblocker/src/main/res/values/: strings.xml  themes.xml
aar/webviewadblocker/src/main/res/values-night/: themes.xml
aar/webviewadblocker/src/test/java/com/xayn/adblocker/webviewadblocker/: ExampleUnitTest.kt
rust/: Cargo.toml
rust/src/: lib.rs
