[package]
name = "adblockerjni"
version = "0.1.0"
authors = ["Simon Joecks <simon.joecks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
jni = { version = "0.10.2", default-features = false }
adblock = { version = "0.3.9" }
once_cell = {version = "1.7.2" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10"


[profile.release]
lto = true

[lib]
name = "adblockerjni"
crate-type = ["cdylib"]
