[package]
name = "adblockerjni"
version = "0.1.0"
authors = ["Simon Joecks <simon.joecks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
jni = { version = "0.10.2", default-features = false }
adblock = "0.3.9"
serde_json = "1.0"
env_logger = "0.8.3"
lazy_static = "1.4.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10"

[profile.release]
lto = true
codegen-units = 1


[lib]
name = "adblockerjni"
crate-type = ["cdylib"]
